// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer Component > should render collapsed state correctly 1`] = `
<div>
  <div
    class="md:p-4 p-2 border border-gray-300 rounded-md cursor-pointer"
  >
    <div
      class="flex md:space-x-2 space-x-1 items-center"
    >
      <div
        class="flex-1"
      >
        <div>
          Main Content
        </div>
      </div>
      <span
        class="material-icons-outlined text-gray-500"
      >
        expand_more
      </span>
    </div>
  </div>
</div>
`;

exports[`Drawer Component > should render expanded state correctly 1`] = `
<div>
  <div
    class="md:p-4 p-2 border border-gray-300 rounded-md cursor-pointer"
  >
    <div
      class="flex md:space-x-2 space-x-1 items-center"
    >
      <div
        class="flex-1"
      >
        <div>
          Main Content
        </div>
      </div>
      <span
        class="material-icons-outlined text-gray-500"
      >
        expand_less
      </span>
    </div>
    <div
      class="mt-4 pt-4 border-t border-gray-300"
    >
      <div>
        Expanded Content
      </div>
    </div>
  </div>
</div>
`;
